Increase media breakpoints for timeline to prevent text overlap

--- a/source/css/custom.scss
+++ b/source/css/custom.scss
@@ -482,7 +482,7 @@ ul.social {
 
 
 
-@media (max-width: 768px) {
+@media (max-width: 989px) {
     .bg_parallax {
         background-position-x: 10% !important;
     }
@@ -509,7 +509,7 @@ ul.social {
     }
 }
 
-@media (min-width: 769px) {
+@media (min-width: 990px) {
   .opacy_bg_02, .opacy_bg_05 {
       padding: 70px 0 130px;
   }
